# spacemolt-gateway

./: .gitattributes  .gitignore  CLAUDE.md  README.md  gateway_errors.txt  pyproject.toml
.claude/skills/clean-python/: SKILL.md
.claude/skills/dev-logging/: SKILL.md
.claude/skills/git-flow/: SKILL.md
.claude/skills/new-gateway-skill/: SKILL.md
.claude/skills/sdd-workflow/: SKILL.md
.specs/: README.md  constitution.md
.specs/0001-gateway-core/: plan.md  spec.md  tasks.md
.specs/0002-skill-mining/: plan.md  spec.md  tasks.md
.specs/0003-dev-log-stream/: plan.md  spec.md  tasks.md
.specs/0004-full-raw-proxy/: plan.md  spec.md  tasks.md
.specs/0005-real-transport/: plan-ondemand.md  plan.md  spec-ondemand.md  spec.md  tasks-ondemand.md  tasks.md
.specs/0006-mining-resiliente/: plan.md  spec.md  tasks.md
.specs/0007-skill-navegacao/: plan.md  spec.md  tasks.md
.specs/0008-skill-trading/: plan.md  spec.md  tasks.md
.specs/0009-skill-manutencao/: plan.md  spec.md  tasks.md
.specs/0010-galaxy-map/: plan.md  spec.md  tasks.md
app/: game_client.py  registry.py  server.py
app/core/: errors.py  proxy.py
app/core/devlog/: bus.py  handler.py  levels.py  setup.py  ws_server.py
app/skills/mining/: executor.py  planner.py  schema.py  tool.py
app/transports/: streamable_http.py  stub.py
scripts/: clean_files.py  git_step.sh  run_tests.sh
tests/: test_game_client.py  test_placeholder.py  test_registry.py  test_server_smoke.py
tests/core/: test_errors.py  test_proxy.py  test_proxy_schema.py
tests/transports/: test_streamable_http.py
(+5 files in other folders)
