[project]
name = "spacemolt-gateway"
version = "0.1.0"
description = "MCP gateway in front of SpaceMolt"
requires-python = ">=3.11"

dependencies = [
    "mcp>=1.0.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
